--- a/src/Position.css
+++ b/src/Position.css
@@ -17,4 +17,22 @@
     width: 30px;
     height: 30px;
     transform: translate(-15px, -15px);
+    cursor: pointer;
+}
+
+.Position__Select {
+    border: 2px solid green;
+    border-radius: 20px;
+}
+
+.Position__Select--pickedUp {
+    width: 34px;
+    height: 34px;
+    transform: translate(-19px, -19px);
+}
+
+.Position__Select--jumpTarget {
+    width: 24px;
+    height: 24px;
+    transform: translate(-14px, -14px);
 }
