--- a/src/Game.css
+++ b/src/Game.css
@@ -17,3 +17,20 @@
     font-size: 16px;
     visibility: visible;
 }
+
+.Game__Discards {
+    margin: 0.5em 0;
+}
+
+.Game__DiscardPeg {
+    border-radius: 6px;
+    width: 12px;
+    height: 12px;
+    background-color: black;
+    margin: 1px;
+    display: inline-block;
+}
+
+.Game__DiscardPeg--placeholder {
+    visibility: hidden;
+}
